Update readme and dependencies

--- a/package.json
+++ b/package.json
@@ -13,37 +13,37 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^14.0.0",
-    "@angular/core": "^14.0.0",
-    "@angular/forms": "^14.0.0",
-    "@angular/platform-browser": "^14.0.0",
-    "@angular/platform-browser-dynamic": "^14.0.0",
-    "@angular/router": "^14.0.0",
-    "@capacitor/android": "4.1.0",
+    "@angular/common": "^14.2.2",
+    "@angular/core": "^14.2.2",
+    "@angular/forms": "^14.2.2",
+    "@angular/platform-browser": "^14.2.2",
+    "@angular/platform-browser-dynamic": "^14.2.2",
+    "@angular/router": "^14.2.2",
+    "@capacitor/android": "4.2.0",
     "@capacitor/app": "4.0.1",
-    "@capacitor/core": "4.1.0",
+    "@capacitor/core": "4.2.0",
     "@capacitor/haptics": "4.0.1",
-    "@capacitor/ios": "4.1.0",
+    "@capacitor/ios": "4.2.0",
     "@capacitor/keyboard": "4.0.1",
     "@capacitor/status-bar": "4.0.1",
-    "@ionic/angular": "^6.1.9",
-    "airwatch-sdk-plugin": "22.5.0",
+    "@ionic/angular": "6.2.7",
+    "airwatch-sdk-plugin": "22.8.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.0.0",
-    "@angular-eslint/builder": "~13.0.1",
-    "@angular-eslint/eslint-plugin": "~13.0.1",
-    "@angular-eslint/eslint-plugin-template": "~13.0.1",
-    "@angular-eslint/template-parser": "~13.0.1",
-    "@angular/cli": "^14.0.0",
-    "@angular/compiler": "^14.0.0",
-    "@angular/compiler-cli": "^14.0.0",
-    "@angular/language-service": "^14.0.0",
-    "@capacitor/cli": "4.1.0",
-    "@ionic/angular-toolkit": "^6.0.0",
+    "@angular-devkit/build-angular": "^14.2.3",
+    "@angular-eslint/builder": "14.1.1",
+    "@angular-eslint/eslint-plugin": "14.1.1",
+    "@angular-eslint/eslint-plugin-template": "14.1.1",
+    "@angular-eslint/template-parser": "14.1.1",
+    "@angular/cli": "^14.2.3",
+    "@angular/compiler": "^14.2.2",
+    "@angular/compiler-cli": "^14.2.2",
+    "@angular/language-service": "^14.2.2",
+    "@capacitor/cli": "4.2.0",
+    "@ionic/angular-toolkit": "7.0.0",
     "@ionic/cli": "6.20.1",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
