--- a/package.json
+++ b/package.json
@@ -20,14 +20,16 @@
     "@angular/platform-browser-dynamic": "^14.2.2",
     "@angular/router": "^14.2.2",
     "@capacitor/android": "4.2.0",
-    "@capacitor/app": "4.0.1",
+    "@capacitor/app": "4.1.1",
     "@capacitor/core": "4.2.0",
-    "@capacitor/haptics": "4.0.1",
+    "@capacitor/haptics": "4.1.0",
     "@capacitor/ios": "4.2.0",
-    "@capacitor/keyboard": "4.0.1",
-    "@capacitor/status-bar": "4.0.1",
+    "@capacitor/keyboard": "4.1.0",
+    "@capacitor/preferences": "4.0.2",
+    "@capacitor/status-bar": "4.1.1",
     "@ionic/angular": "6.2.7",
     "airwatch-sdk-plugin": "22.8.0",
+    "cordova-ios-plugin-userdefaults": "1.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
